--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.562.0",
     "next": "15.1.3",
+    "next-intl": "^4.6.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/react": "19.2.7",
     "autoprefixer": "^10.4.23",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
